# python-liboxide

./: Makefile  README.md  pyproject.toml  test.py
.github/workflows/: build.yaml
liboxide/: __init__.py  _apps.py  _base.py  _errors.py  _notification.py  _power.py  _screen.py  _system.py  _util.py  _wifi.py  _xdgsettings.py  apps.py
