[project]
name = "liboxide"
description = "Python wrapper around the oxide command line tools."
readme = "README.md"
version = "0.1.0"
requires-python = ">= 3.9"
authors = [
    {name = "Nathaniel van Diepen", email = "eeems@eeems.email"},
]
maintainers = [
    {name = "Nathaniel van Diepen", email = "eeems@eeems.email"},
]
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/Eeems-Org/python-liboxide"
Repository = "https://github.com/Eeems-Org/python-liboxide.git"
Issues = "https://github.com/Eeems-Org/python-liboxide/issues"

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"
